@@ -10,6 +10,7 @@ package org.andor.core;
 
 import org.andor.core.logger.Log;
 import org.andor.core.logger.Logger;
+import org.andor.utils.BufferUtils;
 import org.lwjgl.LWJGLException;
 import org.lwjgl.openal.AL;
 import org.lwjgl.openal.AL10;
@@ -72,7 +73,10 @@ public class AudioPC extends Audio {
 		//Update the listener
 		AL10.alListener3f(AL10.AL_POSITION, this.listenerPosition.x, this.listenerPosition.y, this.listenerPosition.z);
 		AL10.alListener3f(AL10.AL_VELOCITY, this.listenerVelocity.x, this.listenerVelocity.y, this.listenerVelocity.z);
-		AL10.alListener3f(AL10.AL_ORIENTATION, this.listenerRotation.x, this.listenerRotation.y, this.listenerRotation.z);
+		//Calculate the correct direction for the listener
+        float xDirection = -1f * (float) Math.sin(Math.toRadians(this.listenerRotation.y));
+        float zDirection = -1f * (float) Math.cos(Math.toRadians(this.listenerRotation.y));
+		AL10.alListener(AL10.AL_ORIENTATION, BufferUtils.createFlippedBuffer(new float[] { xDirection, 0, zDirection, 0, 1f, 0 }));
 		//Update the sources values
 		AL10.alSource3f(this.sourceHandle, AL10.AL_POSITION, this.sourcePosition.x, this.sourcePosition.y, this.sourcePosition.z);
 		AL10.alSource3f(this.sourceHandle, AL10.AL_VELOCITY, this.sourceVelocity.x, this.sourceVelocity.y, this.sourceVelocity.z);
