@@ -182,8 +182,10 @@ public class Renderer {
 	/* The method used to draw the object */
 	public void render() {
 		//Multiply the matrices together to get the final model view projection matrix
-		Matrix4D projectionViewMatrix = Matrix.multiplyMatrices(Matrix.projectionMatrix, Matrix.viewMatrix);
-		Matrix.modelViewProjectionMatrix = Matrix.transpose((Matrix.multiplyMatrices(projectionViewMatrix, Matrix.modelMatrix)));
+		Matrix4D projectionViewMatrix = Matrix.multiply(Matrix.projectionMatrix, Matrix.viewMatrix);
+		Matrix.modelViewProjectionMatrix = Matrix.transpose((Matrix.multiply(projectionViewMatrix, Matrix.modelMatrix)));
+		//Calculate the normal matrix
+		Matrix.normalMatrix = Matrix.invert(Matrix.transpose(Matrix.modelMatrix));
 		//Set the correct shader
 		Shader shader = defaultShader;
 		if (currentShader != null)
@@ -198,10 +200,12 @@ public class Renderer {
 		int viewMatrixAttribute = shader.getUniformLocation("andor_viewmatrix");
 		int projectionMatrixAttribute = shader.getUniformLocation("andor_projectionmatrix");
 		int matrixAttribute = shader.getUniformLocation("andor_modelviewprojectionmatrix");
+		int normalMatrixAttribute = shader.getUniformLocation("andor_normalmatrix");
 		GL20.glUniformMatrix4(modelMatrixAttribute, false, BufferUtils.createFlippedBuffer(Matrix.modelMatrix.getValues()));
 		GL20.glUniformMatrix4(viewMatrixAttribute, false, BufferUtils.createFlippedBuffer(Matrix.viewMatrix.getValues()));
 		GL20.glUniformMatrix4(projectionMatrixAttribute, false, BufferUtils.createFlippedBuffer(Matrix.projectionMatrix.getValues()));
 		GL20.glUniformMatrix4(matrixAttribute, false, BufferUtils.createFlippedBuffer(Matrix.modelViewProjectionMatrix.getValues()));
+		GL20.glUniformMatrix4(normalMatrixAttribute, false, BufferUtils.createFlippedBuffer(Matrix.normalMatrix.getValues()));
 		GL20.glEnableVertexAttribArray(vertexPositionAttribute);
 		GL15.glBindBuffer(GL15.GL_ARRAY_BUFFER, this.verticesHandle);
 		GL20.glVertexAttribPointer(vertexPositionAttribute, this.vertexValuesCount, GL11.GL_FLOAT, false, 0, 0);
