@@ -121,8 +121,10 @@ public class AndroidRenderer extends Renderer {
 	/* The method used to draw the object */
 	public void render() {
 		//Multiply the matrices together to get the final model view projection matrix
-		Matrix4D projectionViewMatrix = Matrix.multiplyMatrices(Matrix.projectionMatrix, Matrix.viewMatrix);
-		Matrix.modelViewProjectionMatrix = Matrix.transpose((Matrix.multiplyMatrices(projectionViewMatrix, Matrix.modelMatrix)));
+		Matrix4D projectionViewMatrix = Matrix.multiply(Matrix.projectionMatrix, Matrix.viewMatrix);
+		Matrix.modelViewProjectionMatrix = Matrix.transpose((Matrix.multiply(projectionViewMatrix, Matrix.modelMatrix)));
+		//Calculate the normal matrix
+		Matrix.normalMatrix = Matrix.invert(Matrix.transpose(Matrix.modelMatrix));
 		//Set the correct android shader
 		Shader androidShader = defaultAndroidShader;
 		if (currentShader != null)
@@ -137,10 +139,12 @@ public class AndroidRenderer extends Renderer {
 		int viewMatrixAttribute = androidShader.getUniformLocation("andor_viewmatrix");
 		int projectionMatrixAttribute = androidShader.getUniformLocation("andor_projectionmatrix");
 		int matrixAttribute = androidShader.getUniformLocation("andor_modelviewprojectionmatrix");
+		int normalMatrixAttribute = androidShader.getUniformLocation("andor_normalmatrix");
 		GLES20.glUniformMatrix4fv(modelMatrixAttribute, 1, false, Matrix.modelMatrix.getValues(), 0);
 		GLES20.glUniformMatrix4fv(viewMatrixAttribute, 1, false, Matrix.viewMatrix.getValues(), 0);
 		GLES20.glUniformMatrix4fv(projectionMatrixAttribute, 1, false, Matrix.projectionMatrix.getValues(), 0);
 		GLES20.glUniformMatrix4fv(matrixAttribute, 1, false, Matrix.modelViewProjectionMatrix.getValues(), 0);
+		GLES20.glUniformMatrix4fv(normalMatrixAttribute, 1, false, Matrix.normalMatrix.getValues(), 0);
 		GLES20.glEnableVertexAttribArray(vertexPositionAttribute);
 		GLES20.glBindBuffer(GLES20.GL_ARRAY_BUFFER, this.verticesHandle);
 		GLES20.glVertexAttribPointer(vertexPositionAttribute, this.vertexValuesCount, GLES20.GL_FLOAT, false, 0, 0);
