@@ -1,4 +1,13 @@
 ------------------------------------------------------
+Release 2 | Beta 1 | Development 0 | Experimental 2
+
+* Added normal matrix to the vertex shader
+* Added colours to font
+
+* Fixed bug: 3D sound system didn't take notice
+  of direction
+
+------------------------------------------------------
 Release 2 | Beta 1 | Development 0 | Experimental 1
 
 * Added support for multiple buttons on the mouse
